# syateki_foot_button

./: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old_  sdkconfig_
components/m5stickc-idf/: CMakeLists.txt  m5stickc.c
components/m5stickc-idf/include/: button.h
components/m5stickc-idf/util/: button.c
main/: CMakeLists.txt  Kconfig.projbuild  bt_main.cpp  bt_main.h  digital_switch.hpp  http_request.c  http_request.h  irShooter.cpp  irShooter.hpp  main.c  wifi_main.c  wifi_main.h
